// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSwitch renders correctly 1`] = `
<label
  class="switch form-check-label switch-undefined"
>
  <input
    class="switch-input form-check-input"
    type="radio"
    value=""
  />
   
  <span
    class="switch-slider"
  />
</label>
`;

exports[`CSwitch renders correctly 2`] = `
<label
  class="switch form-check-label switch-outline-info-alt switch-lg switch-3d"
>
  <input
    class="switch-input form-check-input"
    dataoff="dataOff"
    dataon="dataOn"
    id="myId"
    name="myName"
    required="required"
    type="checkbox"
    value="checked"
  />
   
  <span
    class="switch-slider"
  />
</label>
`;
